# opengl-shenanigans

./: CMakeLists.txt  main.c
